@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4UIcsh.cc,v 1.2 2000-06-14 03:18:59 asaim Exp $
+// $Id: G4UIcsh.cc,v 1.3 2000-06-23 08:46:49 stesting Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -41,7 +41,8 @@ G4String G4UIcsh::GetCommandLine()
   }
 
   // multi-line
-  while( newCommand[newCommand.length()-1] == '_' ) {
+  while( (newCommand.length() > 0) &&
+	 (newCommand[newCommand.length()-1] == '_') ) {
     G4String newLine;
     newCommand.remove(newCommand.length()-1);
     newLine.readLine(G4cin, FALSE);
