@@ -1,4 +1,4 @@
-$Id: History,v 1.30 2000-06-21 17:43:36 johna Exp $
+$Id: History,v 1.31 2000-06-23 08:46:48 stesting Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+23 June 2000 John Allison (interfaces-V01-01-06)
+- Protected G4UIterminal, G4Ui[t]csh against access by index to null strings.
 
 21 June 2000 John Allison (interfaces-V01-01-05)
 - Added include $(G4INSTALL)/config/G4VIS_BUILD.gmk to common/GNUmakefile.
